--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -4,7 +4,7 @@ nav {
 	position: sticky;
 	top: 0;
 	box-shadow: black 0px 1px 10px;
-	.container {
+	.container-nav {
 		background: #fff;
 		display: flex;
 		width: 100%;
@@ -42,7 +42,7 @@ ul {
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 	nav {
-		.container {
+		.container-nav {
 			flex-direction: column;
 		}
 	}
